testing to see if adding smaller max height media query fixes iphone header image stretch on safari

--- a/src/index.css
+++ b/src/index.css
@@ -88,4 +88,7 @@ code {
         height: 247px;
         margin: 10px;
     }
+    .projectHeader {
+        max-height: 160px;
+    }
 }
